# statistical-modelling-enem

./: .gitignore  AI_interpreter.py  README.md  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: enem_data_like_pipeline.yml  main.yml
apps/: enem_dashboard.py
configs/: causal_trees.yml  configs.yml  pipeline.yml  statistical_tests.yml
dados/microdados_enem_2019/: readme.md  sample_dados_enem_processados.csv
docs/: data.js  index.html
docs/enem-metrics-2013/causal/: causal_effects_2013.json
docs/enem-metrics-2013/statistical/: statistical_tests_2013.json
docs/enem-metrics-2014/causal/: causal_effects_2014.json
docs/enem-metrics-2014/statistical/: statistical_tests_2014.json
docs/enem-metrics-2015/causal/: causal_effects_2015.json
docs/enem-metrics-2015/statistical/: statistical_tests_2015.json
docs/enem-metrics-2016/causal/: causal_effects_2016.json
docs/enem-metrics-2016/statistical/: statistical_tests_2016.json
docs/enem-metrics-2017/causal/: causal_effects_2017.json
docs/enem-metrics-2017/statistical/: statistical_tests_2017.json
docs/enem-metrics-2018/causal/: causal_effects_2018.json
docs/enem-metrics-2018/statistical/: statistical_tests_2018.json
docs/enem-metrics-2019/causal/: causal_effects_2019.json
docs/enem-metrics-2019/statistical/: statistical_tests_2019.json
legacy/: AI_interpreter.py  sample.py
notebooks/: analise_exploratoria.ipynb  causal_tree.ipynb  clusters.ipynb  modelagem_stat.ipynb  tratamentos_de_dados.ipynb
scripts/enem_pipeline/: gcs_utils.py  generate_data_js.py  ingest_raw_enem.py  process_enem.py  run_causal_trees.py  run_statistical_tests.py
