[project]
name = "modelagem-estatistica-enem"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "factor-analyzer>=0.5.1",
    "ipykernel>=7.1.0",
    "nbformat>=5.10.4",
    "numpy>=2.4.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]
