[project]
name = "modelagem-estatistica-enem"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "econml>=0.16.0",
    "factor-analyzer>=0.5.1",
    "ipykernel>=7.1.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "numba>=0.57.0",
    "numpy<2.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "patsy>=1.0.2",
    "plotly>=6.5.2",
    "scikit-learn<1.6",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "wandb>=0.24.0",
    "xgboost>=3.1.3",
]
